<resources>
    <string name="app_name">Lost &amp; Found</string>
    <!--<string name="app_name"></string>-->
    <!-- KEYs & IDs-->
    <string name="facebook_app_id">824125644291970</string>



    <!-- ACTIVITY TITLES -->
    <string name="title_activity_report_form">Report Form</string>
    <string name="title_activity_main"></string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_top_rated_fragment">TopRatedFragment</string>
    <string name="title_activity_messaging">Messaging</string>
    <string name="title_activity_conversation_list">Conversations</string>
    <string name="title_activity_pick_location">Pick Location</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_possible_matches">Possible Matches</string>



    <!-- CONFIGURATION -->
    <string name="max_password_length">12</string>
    <string name="app_background_color">#ff009ab6</string>



    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="user_name_hint">Email</string>
    <string name="or_login_with">-or Login with-</string>
    <string name="login_with_email">Login</string>
    <string name="sign_up">Sign Up</string>

    <string name="lost_item">Lost Item</string>
    <string name="found_item">Found Item</string>
    <string name="messages">Messages</string>
    <string name="my_history">My History</string>
    <string name="delete_user">Delete User</string>
    <string name="change_password">Change Password</string>
    <string name="history_length">History Length:</string>
    <string name="push_notifications">Enable Push Notifications</string>
    <string name="number_messages">Messages</string>
    <string name="days_ago">&#160;days ago</string>
    <string name="near">&#160;near:&#160;</string>
    <string name="default_city">Rehovot</string>
    <string name="default_description">very nice item</string>
    <string name="descriptionTitle">Description:</string>
    <string name="showOnMapContentDescription">Show on map</string>
    <string name="itemImageContentDescription">Item Image</string>
    <string name="messageButtonContentDescription" />
    <string name="lossTimeDefaultHint">[[ Loss time ]]</string>
    <string name="locationDefaultHint">[[ Location ]]</string>
    <string name="itemDescriptionDefaultHint">no description found</string>
    <string name="message_elipsis">Message...</string>
    <string name="default_user_name">Israel Israeli</string>
    <string name="default_user_email">Israel Israeli@gmail.com</string>
    <string name="search_title">Search</string>
    <string name="userEmail">Email:</string>
    <string name="password_hint">Password</string>

    <string name="hello_world">Hello world!</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="my_open_listings"><![CDATA[Open lost & found listings:]]></string>
    <string name="default_open_listings_num">0</string>
    <string name="share">Share</string>
    <string name="possible_matches">Possible Matches Found</string>
    <string name="ADD_ITEM_DESCRIPTION">add a detailed description</string>
    <string name="action_complete">Found</string>
    <string name="userDisplayName">Display Name:</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_new_password_again">Enter Password Again</string>
    <string name="passwords_match">Passwords Match</string>
    <string name="passwords_not_equal">Passwords Don\'t Match</string>
    <string name="update_user_name">Update</string>
    <string name="ok">O.K</string>
    <string name="password_has_been_changed">Password has been successfully changed</string>
    <string name="password_changed">Password changed</string>
    <string name="password_too_short">Password too short</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">edit</string>
    <string name="action_share">share</string>
    <string name="item">Item:</string>
    <string name="action_get_matches">Get Matches</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noItemsAvailable">No items are available</string>
    <string name="logout_button">logout_button</string>
    <string name="user_display_name">userDisplayName</string>
    <string name="display_name">Display Name</string>
    <string name="enable_push_messages">EnablePushMessages</string>
    <string name="selectItem">Choose Item</string>

</resources>
