<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:title="@string/display_name"
        android:key="@string/user_display_name"
        android:summary="Please provide your display name as it will be shown to others."></EditTextPreference>
    <CheckBoxPreference android:title="Application Push Notifications"
        android:defaultValue="true"
        android:summary="This option if selected will allow the application to show push notifications."
        android:key="@string/enable_push_messages" />
    <Preference android:title="Logout"
        android:key="@string/logout_button"
        android:summary="Logout from the application"/>

    <!--<ListPreference     android:title="Download Details"-->
        <!--android:summary="Select the kind of data that you would like to download"-->
        <!--android:key="downloadType"-->
        <!--android:defaultValue="1"-->
        <!--android:entries="@array/listArray"-->
        <!--android:entryValues="@array/listValues" />-->
</PreferenceScreen>