<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/empty_profile"
            android:scaleType="fitCenter"
            android:id="@+id/ib_user_image"
            android:background="@drawable/image_border"
            android:layout_marginLeft="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/tv_display_name"
            android:text="@string/userDisplayName"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:layout_toRightOf="@+id/ib_user_image"
            android:layout_alignBaseline="@+id/et_userName"
            android:layout_alignBottom="@+id/et_userName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/et_userName"
            android:hint="@string/default_user_name"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:textSize="@dimen/abc_text_size_medium_material"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ib_user_image"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/b_change_password"
        android:text="@string/change_password"
        android:background="@color/off_white"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/b_log_out"
        android:text="@string/logout"
        android:background="@color/off_white"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/b_delete_user"
        android:text="@string/delete_user"
        android:background="@color/off_white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_length"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sp_history_length"
            android:spinnerMode="dropdown"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_messages"
            />


    </LinearLayout>

    <CheckBox
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/push_notifications"
        android:checked="true"/>



</LinearLayout>
