<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.avner.lostfound.LoginActivity"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ff009ab6">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/iv_lost_found"
            android:src="@drawable/lf_background"
            android:adjustViewBounds="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_user_name"
            android:hint="@string/user_name_hint"
            android:textColorHint="@color/primary_dark_material_dark"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Password - up to 12 characters"
            android:id="@+id/et_user_password"
            android:textColorHint="@color/primary_dark_material_dark"
            android:maxLength="@string/max_password_length" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Retype Password"
            android:id="@+id/et_user_retype_password"
            android:textColorHint="@color/primary_dark_material_dark"
            android:maxLength="@string/max_password_length" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="#ff91abff" />


    </LinearLayout>





</RelativeLayout>
