<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:descendantFocusability="blocksDescendants"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_itemListingImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/image_unavailable" />

    <TextView
        android:id="@+id/tv_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/iv_itemListingImage"
        android:layout_toRightOf="@+id/iv_itemListingImage"
        android:width="180dp"
        android:hint="Item name long long long long long long"
        android:singleLine="true"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/ib_editReport"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@android:drawable/ic_menu_edit"
        android:background="@android:color/transparent"/>

    <TextView
        android:id="@+id/tv_number_of_days_ago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_item_name"
        android:layout_alignStart="@+id/tv_item_name"
        android:layout_alignTop="@+id/textView"
        android:singleLine="true"
        android:text="#"
        android:textColor="@color/abc_search_url_text" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_item_name"
        android:layout_toEndOf="@+id/tv_number_of_days_ago"
        android:layout_toRightOf="@+id/tv_number_of_days_ago"
        android:text="@string/days_ago" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_near_address"
        android:layout_toRightOf="@+id/textView"
        android:text="@string/near" />

    <TextView
        android:id="@+id/tv_near_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/textView1"
        android:layout_toLeftOf="@+id/ib_editReport"
        android:singleLine="true"
        android:text="@string/default_city"
        android:textColor="@color/abc_search_url_text" />

    <TextView
        android:id="@+id/tv_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_near_address"
        android:layout_alignLeft="@+id/tv_number_of_days_ago"
        android:layout_alignStart="@+id/tv_number_of_days_ago"
        android:text="Description: "
        android:singleLine="true" />

    <TextView
        android:id="@+id/tv_item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_near_address"
        android:layout_toRightOf="@+id/tv_description_text"
        android:layout_toEndOf="@+id/tv_description_text"
        android:width="180dp"
        android:hint="@string/itemDescriptionDefaultHint"
        android:singleLine="true" />


</RelativeLayout>